@@ -1,4 +1,4 @@
-# Copyright (C) 2009 - 2014 Dirk Eddelbuettel and Romain Francois
+# Copyright (C) 2009 - 2018 Dirk Eddelbuettel and Romain Francois
 # Earlier copyrights Gregor Gorjanc, Martin Maechler and Murray Stokely as detailed below
 #
 # This file is part of Rcpp.
@@ -28,43 +28,37 @@
 ##
 ## Dirk Eddelbuettel, Feb 2014
 
-stopifnot(require(RUnit, quietly=TRUE))
-stopifnot(require(Rcpp, quietly=TRUE))
+if (requireNamespace("RUnit", quietly=TRUE) &&
+    requireNamespace("Rcpp", quietly=TRUE)) {
 
-## Set a seed to make the test deterministic
-set.seed(42)
+    library(RUnit)
+    library(Rcpp)
 
-## Define tests
-testSuite <- defineTestSuite(name = "Rcpp Unit Tests",
-                             dirs = system.file("unitTests", package = "Rcpp"),
-                             testFuncRegexp = "^[Tt]est.+")
+    set.seed(42)    					# Set a seed to make the test deterministic
 
-## without this, we get (or used to get) unit test failures
-Sys.setenv("R_TESTS"="")
+    ## Define tests
+    testSuite <- defineTestSuite(name = "Rcpp Unit Tests",
+                                 dirs = system.file("unitTests", package = "Rcpp"),
+                                 testFuncRegexp = "^[Tt]est.+")
 
-## force tests to be executed if in dev release which we define as
-## having a sub-release, eg 0.9.15.5 is one whereas 0.9.16 is not
-if (length(strsplit(packageDescription("Rcpp")$Version, "\\.")[[1]]) > 3) {	# dev release, and
-    if (Sys.getenv("RunAllRcppTests") != "no") { 				# if env.var not yet set
-        message("Setting \"RunAllRcppTests\"=\"yes\" for development release\n")
-        Sys.setenv("RunAllRcppTests"="yes")
+    Sys.setenv("R_TESTS"="")    		# without this, we get (or used to get) unit test failures
+
+    ## force tests to be executed if in dev release which we define as
+    ## having a sub-release, eg 0.9.15.5 is one whereas 0.9.16 is not
+    if (length(strsplit(packageDescription("Rcpp")$Version, "\\.")[[1]]) > 3) {	# dev release, and
+        if (Sys.getenv("RunAllRcppTests") != "no") { 				# if env.var not yet set
+            message("Setting \"RunAllRcppTests\"=\"yes\" for development release\n")
+            Sys.setenv("RunAllRcppTests"="yes")
+        }
     }
-}
 
-## Run tests
-tests <- runTestSuite(testSuite)
+    tests <- runTestSuite(testSuite)	# Run tests
 
-## Print results
-printTextProtocol(tests)
+    printTextProtocol(tests)			# Print results
 
-## Return success or failure to R CMD CHECK
-if (getErrors(tests)$nFail > 0) {
-    stop("TEST FAILED!")
+    ## Return success or failure to R CMD CHECK
+    if (getErrors(tests)$nFail > 0) stop("TEST FAILED!")
+    if (getErrors(tests)$nErr > 0) stop("TEST HAD ERRORS!")
+    if (getErrors(tests)$nTestFunc < 1 && Sys.getenv("RunAllRcppTests")=="yes")
+        stop("NO TEST FUNCTIONS RUN!")
 }
-if (getErrors(tests)$nErr > 0) {
-    stop("TEST HAD ERRORS!")
-}
-if (getErrors(tests)$nTestFunc < 1 && Sys.getenv("RunAllRcppTests")=="yes") {
-    stop("NO TEST FUNCTIONS RUN!")
-}
-
