@@ -1,4 +1,9 @@
-2018-09-18  JJ Allaire  <jj@rstudio.com>
+2018-10-12  Dirk Eddelbuettel  <edd@debian.org>
+
+	* tests/doRUnit.R: Simplified to something similar to what
+	RcppArmadillo (and other packages) had for a while now
+
+2018-10-08  JJ Allaire  <jj@rstudio.com>
 
 	* R/Attributes.R: Sort the files scanned for attributes in the C locale
 	for stable output across systems.
